feat: complete layout setup

--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
 		<link rel="stylesheet" href="styles/index.css" />
 		<title>Formulário de convite</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<aside>
+				<div class="title-banner">
+					<img src="assets/Logo.svg" alt="" />
+					<p>Festivite</p>
+					<p>Crie um convite digital para o seu evento</p>
+				</div>
+			</aside>
+			<main>
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+				Exercitationem corporis accusantium hic totam excepturi magnam
+				ipsam iusto assumenda inventore nam unde eius eos consequatur
+				doloremque ipsum, qui commodi pariatur cupiditate.
+			</main>
+		</div>
+	</body>
 </html>
