--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 			<aside>
 				<div class="title-banner">
 					<img src="assets/Logo.svg" alt="" />
-					<p>Festivite</p>
-					<p>Crie um convite digital para o seu evento</p>
+					<div class="text-banner">
+						<h1>Festivite</h1>
+						<p>Crie um convite digital para o seu evento</p>
+					</div>
 				</div>
 			</aside>
 			<main>
