feat: complete contact section

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 												id="darkMode" />
 											<label for="darkMode"></label>
 										</div>
-										<p>Escuro</p>
+										<p>Escuro / Claro</p>
 									</div>
 								</div>
 								<div class="upload-file">
@@ -398,8 +398,58 @@
 						</div>
 					</fieldset>
 
-					<!-- <fieldset class="contact"></fieldset>
-					<footer></footer>  -->
+					<div class="contact">
+						<legend>
+							<img
+								src="assets/icons/contact.png"
+								alt="contact icon" />
+							<p>Dados para contato</p>
+						</legend>
+						<div class="form-container">
+							<div class="name">
+								<label for="name">Nome </label>
+								<input
+									required
+									type="text"
+									id="name"
+									class="input-field"
+									placeholder="Nome completo" />
+								<div class="error">
+									<img
+										src="assets/icons/circle-alert.png"
+										alt="" />
+									<p>Campo obrigatório</p>
+								</div>
+							</div>
+
+							<div class="email">
+								<label for="email">E-mail</label>
+								<input
+									type="email"
+									id="email"
+									class="input-field"
+									placeholder="exemplo@email.com" />
+							</div>
+
+							<div class="phone">
+								<label for="phone">Telefone</label>
+								<input
+									type="tel"
+									id="phone"
+									class="input-field"
+									placeholder="(99) 99999-9999 " />
+							</div>
+						</div>
+					</div>
+
+					<hr />
+					<div class="terms">
+						<ul>
+							<li><input type="checkbox"></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
 				</section>
 			</div>
 		</main>
