feat: complete terms section

--- a/index.html
+++ b/index.html
@@ -442,14 +442,26 @@
 						</div>
 					</div>
 
-					<hr />
 					<div class="terms">
 						<ul>
-							<li><input type="checkbox"></li>
-							<li></li>
-							<li></li>
+							<li>
+								Li e concordo com os
+								<a href="#">Termos e Condições</a> e com a
+								<a href="">Política de Privacidade</a>
+							</li>
+							<li>
+								Aceito receber atualizações e promoções por
+								e-mail
+							</li>
+							<li>
+								Aceito receber atualizações e promoções por SMS
+							</li>
 						</ul>
 					</div>
+					<button>
+						<img src="assets/icons/ticket.png" alt="ticket" /> Gerar
+						convite
+					</button>
 				</section>
 			</div>
 		</main>
